src/snapshots/enderpy__lexer__tests__raw-f-string-literals-4.snap
---
source: src/lexer.rs
description: "rf'hello_{var}'"
---
[
    Token {
        kind: RawFString,
        value: String(
            "rf'hello_{var}'",
        ),
    },
]
