src/snapshots/enderpy__lexer__tests__raw-f-string-literals-5.snap
---
source: src/lexer.rs
description: "rf\"\"\"hello\"\"\""
---
[
    Token {
        kind: RawFString,
        value: String(
            "rf\"\"\"hello\"\"\"",
        ),
    },
]
