src/snapshots/enderpy__lexer__tests__raw-string-literals-1.snap
---
source: src/lexer.rs
description: "r\"world\""
---
[
    Token {
        kind: RawString,
        value: Str(
            "r\"world\"",
        ),
        start: 0,
        end: 8,
    },
]
