src/snapshots/enderpy__lexer__tests__raw-string-literals-2.snap
---
source: src/lexer.rs
description: "r\"\""
---
[
    Token {
        kind: RawString,
        value: Str(
            "r\"\"",
        ),
        start: 0,
        end: 3,
    },
]
