src/snapshots/enderpy__lexer__tests__raw-string-literals-3.snap
---
source: src/lexer.rs
description: "a = r\"hello\""
---
[
    Token {
        kind: Identifier,
        value: String(
            "a",
        ),
    },
    Token {
        kind: Assign,
        value: None,
    },
    Token {
        kind: RawString,
        value: String(
            "r\"hello\"",
        ),
    },
]
