src/snapshots/enderpy__lexer__tests__raw-string-literals-5.snap
---
source: src/lexer.rs
description: "r\"\"\"hello\"\"\""
---
[
    Token {
        kind: RawString,
        value: String(
            "r\"\"\"hello\"\"\"",
        ),
    },
]
