src/snapshots/enderpy__lexer__tests__snapshot_test_lexer-10.snap
---
source: src/lexer.rs
description: "."
---
[
    Token {
        kind: Dot,
        value: None,
    },
]
