src/snapshots/enderpy__lexer__tests__snapshot_test_lexer-101.snap
---
source: src/lexer.rs
description: "0xb"
---
[
    Token {
        kind: Hexadecimal,
        value: Number(
            "0xb",
        ),
    },
]
